...
    "progress.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Progress"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Прогресс"
...
